--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="description" content="Fort Wayne’s premier cigar lounge & tobacco shop. Walk-in humidor, Perdomo, Arturo Fuente, Drew Estate, Black Label Trading Co., glass & more.">
   <meta name="theme-color" content="#E12C2E">
   <link rel="canonical" href="https://<your-domain>.com/">
-  <link rel="icon" href="/favicon.png">
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+  <link rel="icon" href="favicon.png">
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <link rel="manifest" href="/site.webmanifest">
   <!-- Open Graph -->
   <meta property="og:type" content="website">
@@ -24,7 +24,7 @@
   <meta name="twitter:description" content="Premium cigars, walk-in humidor, glass & a comfortable cigar lounge in Fort Wayne.">
   <meta name="twitter:image" content="https://<your-domain>.com/assets/img/hero-storefront.jpg">
 
-  <link rel="stylesheet" href="/assets/css/styles.css">
+  <link rel="stylesheet" href="assets/css/styles.css">
 
   <script type="application/ld+json">
   {
@@ -212,7 +212,7 @@
 </header>
 
 <section class="hero" aria-label="Storefront hero image">
-  <img src="/assets/img/hero-storefront.jpg" alt="Tobacco Stop Fort Wayne storefront – cigar lounge and tobacco shop">
+  <img src="assets/img/hero-storefront.jpg" alt="Tobacco Stop Fort Wayne storefront – cigar lounge and tobacco shop">
   <div class="overlay">
     <div>
       <h1>The Tobacco Stop &amp; Big Ash Cigar Lounge</h1>
@@ -294,7 +294,7 @@
       <p class="lead">Step inside <strong>Big Ash Cigar Lounge</strong>, Fort Wayne’s most comfortable cigar retreat. Enjoy plush seating, flat‑screen TVs, a private game room, and member lockers for your personal collection.</p>
     </div>
     <div class="card">
-      <img src="/assets/img/lounge-1.jpg" alt="Big Ash Cigar Lounge interior – leather chairs and game room in Fort Wayne" style="width:100%; border-radius:10px;">
+      <img src="assets/img/lounge-1.jpg" alt="Big Ash Cigar Lounge interior – leather chairs and game room in Fort Wayne" style="width:100%; border-radius:10px;">
     </div>
   </div>
 </section>
@@ -314,15 +314,15 @@
   <div class="container">
     <h2>Gallery</h2>
     <div class="gallery">
-      <img src="/assets/img/humidor-1.jpg" alt="Walk-in cigar humidor – Perdomo, Arturo Fuente, Drew Estate in Fort Wayne" data-large="/assets/img/humidor-1.jpg">
-      <img src="/assets/img/gallery-01.jpg" alt="Cigar selection shelves in Fort Wayne tobacco shop" data-large="/assets/img/gallery-01.jpg">
-      <img src="/assets/img/gallery-02.jpg" alt="Boutique cigars selection – Black Label Trading Co." data-large="/assets/img/gallery-02.jpg">
-      <img src="/assets/img/gallery-03.jpg" alt="Cigar tins and small cigars on display" data-large="/assets/img/gallery-03.jpg">
-      <img src="/assets/img/gallery-04.jpg" alt="Premium cigar boxes – lounge inventory" data-large="/assets/img/gallery-04.jpg">
-      <img src="/assets/img/gallery-05.jpg" alt="Store interior and product cases – Fort Wayne" data-large="/assets/img/gallery-05.jpg">
-      <img src="/assets/img/gallery-06.jpg" alt="Glass and accessories display – Hemper rigs" data-large="/assets/img/gallery-06.jpg">
-      <img src="/assets/img/gallery-07.jpg" alt="Candles and gifts – Mythical Candle Co." data-large="/assets/img/gallery-07.jpg">
-      <img src="/assets/img/gallery-08.jpg" alt="Storefront and signage – Tobacco Stop Fort Wayne" data-large="/assets/img/gallery-08.jpg">
+      <img src="assets/img/humidor-1.jpg" alt="Walk-in cigar humidor – Perdomo, Arturo Fuente, Drew Estate in Fort Wayne" data-large="assets/img/humidor-1.jpg">
+      <img src="assets/img/gallery-01.jpg" alt="Cigar selection shelves in Fort Wayne tobacco shop" data-large="assets/img/gallery-01.jpg">
+      <img src="assets/img/gallery-02.jpg" alt="Boutique cigars selection – Black Label Trading Co." data-large="assets/img/gallery-02.jpg">
+      <img src="assets/img/gallery-03.jpg" alt="Cigar tins and small cigars on display" data-large="assets/img/gallery-03.jpg">
+      <img src="assets/img/gallery-04.jpg" alt="Premium cigar boxes – lounge inventory" data-large="assets/img/gallery-04.jpg">
+      <img src="assets/img/gallery-05.jpg" alt="Store interior and product cases – Fort Wayne" data-large="assets/img/gallery-05.jpg">
+      <img src="assets/img/gallery-06.jpg" alt="Glass and accessories display – Hemper rigs" data-large="assets/img/gallery-06.jpg">
+      <img src="assets/img/gallery-07.jpg" alt="Candles and gifts – Mythical Candle Co." data-large="assets/img/gallery-07.jpg">
+      <img src="assets/img/gallery-08.jpg" alt="Storefront and signage – Tobacco Stop Fort Wayne" data-large="assets/img/gallery-08.jpg">
     </div>
   </div>
 </section>
@@ -349,7 +349,7 @@
       <div class="contact-box">
         <h3>Find Us on Facebook</h3>
         <p><a href="https://www.facebook.com/TheBigAshLounge" target="_blank" rel="noopener">facebook.com/TheBigAshLounge</a></p>
-        <img src="/assets/img/hero-storefront.jpg" alt="Tobacco Stop Fort Wayne storefront" style="width:100%; border-radius:10px;">
+        <img src="assets/img/hero-storefront.jpg" alt="Tobacco Stop Fort Wayne storefront" style="width:100%; border-radius:10px;">
       </div>
     </div>
   </div>
@@ -362,6 +362,6 @@
   </div>
 </footer>
 
-<script src="/assets/js/app.js"></script>
+<script src="assets/js/app.js"></script>
 </body>
 </html>
