--- a/index.html
+++ b/index.html
@@ -387,21 +387,21 @@
             width: 50px;
             height: 50px;
             background: white;
-            color: var(--dark-gray);
             display: flex;
             align-items: center;
             justify-content: center;
             border-radius: 8px;
-            font-size: 18px;
-            font-weight: 900;
             box-shadow: var(--shadow);
             border: 2px solid var(--black);
             position: relative;
             overflow: hidden;
-            background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><circle cx="50" cy="50" r="45" fill="%23ffffff" stroke="%23000000" stroke-width="2"/><circle cx="35" cy="40" r="3" fill="%23000000"/><circle cx="65" cy="40" r="3" fill="%23000000"/><ellipse cx="50" cy="50" rx="8" ry="5" fill="none" stroke="%23000000" stroke-width="1.5"/><path d="M42 60 Q50 70 58 60" stroke="%23000000" stroke-width="2" fill="none"/><path d="M30 30 Q50 20 70 30" stroke="%23000000" stroke-width="3" fill="none"/><rect x="45" y="55" width="10" height="8" rx="1" fill="%23000000"/></svg>');
-            background-size: contain;
-            background-repeat: no-repeat;
-            background-position: center;
+        }
+
+        .brand-logo img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+            padding: 2px;
         }
 
         .brand-logo::before {
@@ -414,6 +414,7 @@
             background: linear-gradient(45deg, transparent, rgba(255,255,255,0.1), transparent);
             transform: rotate(45deg);
             transition: transform 0.6s ease;
+            z-index: 1;
         }
 
         .brand:hover .brand-logo::before {
@@ -1053,7 +1054,9 @@
         <div class="container">
             <nav class="nav-bar">
                 <a href="#" class="brand">
-                    <div class="brand-logo"></div>
+                    <div class="brand-logo">
+                        <img src="assets/img/big-ash-logo.png" alt="Big Ash Cigar Lounge Logo">
+                    </div>
                     <div class="brand-text">The Tobacco Stop & Big Ash Cigar Lounge</div>
                 </a>
                 <ul class="nav-menu" id="nav-menu">
