--- a/index.html
+++ b/index.html
@@ -1114,6 +1114,53 @@
         </div>
     </section>
 
+    <section id="products">
+        <div class="container">
+            <div class="section-header fade-in">
+                <h2 class="section-title">Products & Brands</h2>
+                <p class="section-subtitle">Premium cigars, accessories, and everything you need</p>
+            </div>
+            <div class="grid grid-3">
+                <div class="card fade-in">
+                    <h3>Premium Cigars</h3>
+                    <p>Our walk-in humidor features legendary brands with rich histories. <strong>Perdomo Cigars</strong>, crafted in Nicaragua since 1992, offers complex flavors from volcanic soil. <strong>Arturo Fuente</strong>, a Dominican Republic dynasty since 1912, creates hand-rolled masterpieces. <strong>Rocky Patel</strong> brings bold, full-bodied experiences, while <strong>AJ Fernandez</strong> represents new-world Nicaraguan excellence.</p>
+                </div>
+                <div class="card fade-in">
+                    <h3>Black Label Trading Co.</h3>
+                    <p>We're proud stockists of <strong>James Brown's Black Label Trading Co.</strong> and <strong>BLK WKS Studio</strong> - boutique American cigars that push creative boundaries. Experience limited releases like <strong>Killer Bee</strong> (sweet and spicy), <strong>Lawless</strong> (bold Connecticut Broadleaf), <strong>NBK</strong> (Natural Born Killer - intense and complex).</p>
+                </div>
+                <div class="card fade-in">
+                    <h3>Small Cigars & Tins</h3>
+                    <p>Perfect for quick breaks or travel, our small cigar selection includes premium <strong>Cohiba Pequenos</strong> and <strong>Drew Estate</strong> favorites: <strong>ACID Kuba Kuba tins</strong> (aromatic and smooth), <strong>Tabak Especial</strong> (coffee-infused), and <strong>Java</strong> series (mocha notes).</p>
+                </div>
+                <div class="card fade-in">
+                    <h3>Premium Cigarettes</h3>
+                    <p>Complete cigarette selection featuring America's most popular brands. <strong>Marlboro</strong> (the cowboy classic since 1924), <strong>Camel</strong> (Turkish blend heritage), <strong>Newport</strong> (menthol leader), and <strong>American Spirit</strong> (additive-free, organic options).</p>
+                </div>
+                <div class="card fade-in">
+                    <h3>Disposable Vapes</h3>
+                    <p>Cutting-edge disposable vape selection featuring top brands. <strong>Puff Bar</strong> (original disposable pioneer), <strong>Hyde</strong> (long-lasting performance), <strong>Elf Bar</strong> (sleek European design), <strong>Lost Mary</strong> (premium flavors), and <strong>Fume</strong> (cloud production).</p>
+                </div>
+                <div class="card fade-in">
+                    <h3>Pipe Tobacco & RYO</h3>
+                    <p>For traditional tobacco enthusiasts, we carry quality pipe tobacco and roll-your-own options. <strong>American Club</strong> (smooth American blend), <strong>OHM</strong> (premium Turkish and Virginia), and <strong>4 Aces</strong> (classic mellow blend).</p>
+                </div>
+                <div class="card fade-in">
+                    <h3>Glass & Accessories</h3>
+                    <p>Premium smoking accessories featuring <strong>Hemper</strong> glassware - American-made, scientifically designed pieces. Complete selection of water pipes, hookahs, rolling papers, premium lighters, cigar cutters, desktop humidors, and artistic ashtrays.</p>
+                </div>
+                <div class="card fade-in">
+                    <h3>Cuban Heritage Cigars</h3>
+                    <p>Experience the legendary Cuban cigar tradition with <strong>Romeo y Julieta</strong> (Shakespeare-inspired excellence since 1875), <strong>Cohiba</strong> (Fidel Castro's personal brand), and <strong>Montecristo</strong> (the crown jewel of Cuban cigars). Now crafted in Dominican Republic with authentic Cuban heritage.</p>
+                </div>
+                <div class="card fade-in">
+                    <h3>Lifestyle & Gifts</h3>
+                    <p>Unique gift selections including <strong>Mythical Candle Co.</strong> specialty candles with masculine scents perfect for cigar rooms. Don't miss our exclusive <strong>Magical Mystery Drawer</strong> - carefully curated discounted singles, rare cigars, and surprise finds.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section id="lounge">
         <div class="container">
             <div class="section-header fade-in">
@@ -1123,9 +1170,37 @@
             <div class="grid grid-2">
                 <div class="fade-in">
                     <h3>Indiana's Most Comfortable Cigar Lounge Experience</h3>
-                    <p>Welcome to <strong>Big Ash Cigar Lounge</strong> - Fort Wayne's premier destination for cigar enthusiasts seeking the ultimate smoking experience. Our 2,000+ square foot climate-controlled lounge offers a sophisticated retreat where tradition meets modern comfort.</p>
+                    <p>Welcome to <strong>Big Ash Cigar Lounge</strong> - Fort Wayne's premier destination for cigar enthusiasts seeking the ultimate smoking experience. Our 2,000+ square foot climate-controlled lounge offers a sophisticated retreat where tradition meets modern comfort, featuring <strong>24-hour access for members</strong>.</p>
                     
                     <p style="margin-top: 20px;">Whether you're a seasoned aficionado or new to premium cigars, our lounge provides the perfect environment to savor your selection from our extensive humidor. Every detail has been carefully considered to enhance your smoking experience, from our premium ventilation system to our comfortable leather seating arrangements.</p>
+
+                    <h4 style="margin-top: 35px; margin-bottom: 20px; color: var(--red); font-size: 1.3rem;">Featured Premium Cigar Brands in Our Lounge:</h4>
+                    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; margin: 25px 0;">
+                        <div style="padding: 20px; background: rgba(225, 44, 46, 0.05); border-radius: 8px; border-left: 3px solid var(--red);">
+                            <strong>Perdomo Cigars</strong><br>
+                            <small>Nicaraguan excellence since 1992, crafted from volcanic soil</small>
+                        </div>
+                        <div style="padding: 20px; background: rgba(225, 44, 46, 0.05); border-radius: 8px; border-left: 3px solid var(--red);">
+                            <strong>Arturo Fuente</strong><br>
+                            <small>Dominican Republic dynasty since 1912, hand-rolled masterpieces</small>
+                        </div>
+                        <div style="padding: 20px; background: rgba(225, 44, 46, 0.05); border-radius: 8px; border-left: 3px solid var(--red);">
+                            <strong>Rocky Patel</strong><br>
+                            <small>Bold, full-bodied experiences from a modern master</small>
+                        </div>
+                        <div style="padding: 20px; background: rgba(225, 44, 46, 0.05); border-radius: 8px; border-left: 3px solid var(--red);">
+                            <strong>Drew Estate</strong><br>
+                            <small>ACID and Liga Privada lines revolutionizing tradition</small>
+                        </div>
+                        <div style="padding: 20px; background: rgba(225, 44, 46, 0.05); border-radius: 8px; border-left: 3px solid var(--red);">
+                            <strong>Black Label Trading Co.</strong><br>
+                            <small>Boutique American cigars: Killer Bee, Lawless, NBK</small>
+                        </div>
+                        <div style="padding: 20px; background: rgba(225, 44, 46, 0.05); border-radius: 8px; border-left: 3px solid var(--red);">
+                            <strong>Cuban Heritage</strong><br>
+                            <small>Romeo y Julieta, Cohiba, Montecristo classics</small>
+                        </div>
+                    </div>
 
                     <h4 style="margin-top: 35px; margin-bottom: 20px; color: var(--red); font-size: 1.3rem;">World-Class Lounge Amenities:</h4>
                     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 15px; margin: 25px 0;">
@@ -1142,16 +1217,16 @@
                             <small>Pool table and games for group entertainment</small>
                         </div>
                         <div style="padding: 15px; background: rgba(225, 44, 46, 0.05); border-radius: 8px; border-left: 3px solid var(--red);">
+                            <strong>24-Hour Member Access</strong><br>
+                            <small>Exclusive round-the-clock lounge privileges</small>
+                        </div>
+                        <div style="padding: 15px; background: rgba(225, 44, 46, 0.05); border-radius: 8px; border-left: 3px solid var(--red);">
                             <strong>Personal Lockers</strong><br>
                             <small>Secure storage for your cigar collection</small>
                         </div>
                         <div style="padding: 15px; background: rgba(225, 44, 46, 0.05); border-radius: 8px; border-left: 3px solid var(--red);">
                             <strong>Climate Control</strong><br>
                             <small>Perfect temperature and humidity year-round</small>
-                        </div>
-                        <div style="padding: 15px; background: rgba(225, 44, 46, 0.05); border-radius: 8px; border-left: 3px solid var(--red);">
-                            <strong>High-Speed WiFi</strong><br>
-                            <small>Stay connected while you unwind</small>
                         </div>
                     </div>
 
@@ -1177,14 +1252,14 @@
                     <ul style="margin: 20px 0; padding-left: 25px; line-height: 2; list-style: none;">
                         <li style="margin-bottom: 10px;">✓ <strong>Expert Staff</strong> - Knowledgeable team to guide your cigar selection</li>
                         <li style="margin-bottom: 10px;">✓ <strong>Walk-in Humidor Access</strong> - Browse hundreds of premium cigars</li>
+                        <li style="margin-bottom: 10px;">✓ <strong>24-Hour Member Access</strong> - Enjoy the lounge anytime, day or night</li>
                         <li style="margin-bottom: 10px;">✓ <strong>Social Atmosphere</strong> - Meet fellow cigar enthusiasts and make connections</li>
                         <li style="margin-bottom: 10px;">✓ <strong>Private Events</strong> - Host bachelor parties, business meetings, and celebrations</li>
-                        <li style="margin-bottom: 10px;">✓ <strong>Flexible Hours</strong> - Open 6 days a week with extended weekend hours</li>
                         <li style="margin-bottom: 10px;">✓ <strong>Membership Benefits</strong> - Exclusive events, discounts, and locker privileges</li>
                     </ul>
 
                     <p style="margin-top: 25px; font-style: italic; font-size: 1.1rem; color: var(--red);">
-                        "Fort Wayne's only full-service cigar lounge where every visit becomes a memorable experience. Come for the cigars, stay for the community."
+                        "Fort Wayne's premier cigar lounge with 24-hour member access, where every visit becomes a memorable experience. Come for the cigars, stay for the community."
                     </p>
                 </div>
                 <div class="card fade-in" style="background: linear-gradient(135deg, var(--red), var(--red-dark)); color: var(--white); text-align: center; border: 2px solid var(--black);">
