--- a/index.html
+++ b/index.html
@@ -1271,7 +1271,7 @@
                         <h4 style="color: var(--white); margin-bottom: 15px; text-align: center;">Member Benefits Include:</h4>
                         <ul style="list-style: none; padding: 0; line-height: 1.8;">
                             <li>• Personal humidor locker with key access</li>
-                            <li>• 10% discount on all cigar purchases</li>
+                            <li>• Exclusive member pricing on cigars</li>
                             <li>• Exclusive member-only events and tastings</li>
                             <li>• Priority seating during peak hours</li>
                             <li>• Guest privileges for friends and colleagues</li>
