--- a/index.html
+++ b/index.html
@@ -1123,39 +1123,39 @@
             <div class="grid grid-3">
                 <div class="card fade-in">
                     <h3>Premium Cigars</h3>
-                    <p>Our walk-in humidor features legendary brands with rich histories. <strong>Perdomo Cigars</strong>, crafted in Nicaragua since 1992, offers complex flavors from volcanic soil. <strong>Arturo Fuente</strong>, a Dominican Republic dynasty since 1912, creates hand-rolled masterpieces. <strong>Rocky Patel</strong> brings bold, full-bodied experiences, while <strong>AJ Fernandez</strong> represents new-world Nicaraguan excellence.</p>
+                    <p>Our walk-in humidor features legendary brands with rich histories. <strong>Perdomo Cigars</strong>, crafted in Nicaragua since 1992, offers complex flavors from volcanic soil. <strong>Arturo Fuente</strong>, a Dominican Republic dynasty since 1912, creates hand-rolled masterpieces.</p>
                 </div>
                 <div class="card fade-in">
                     <h3>Black Label Trading Co.</h3>
-                    <p>We're proud stockists of <strong>James Brown's Black Label Trading Co.</strong> and <strong>BLK WKS Studio</strong> - boutique American cigars that push creative boundaries. Experience limited releases like <strong>Killer Bee</strong> (sweet and spicy), <strong>Lawless</strong> (bold Connecticut Broadleaf), <strong>NBK</strong> (Natural Born Killer - intense and complex).</p>
+                    <p>We're proud stockists of <strong>James Brown's Black Label Trading Co.</strong> and <strong>BLK WKS Studio</strong> - boutique American cigars that push creative boundaries. Experience limited releases like <strong>Killer Bee</strong>, <strong>Lawless</strong>, and <strong>NBK</strong>.</p>
                 </div>
                 <div class="card fade-in">
                     <h3>Small Cigars & Tins</h3>
-                    <p>Perfect for quick breaks or travel, our small cigar selection includes premium <strong>Cohiba Pequenos</strong> and <strong>Drew Estate</strong> favorites: <strong>ACID Kuba Kuba tins</strong> (aromatic and smooth), <strong>Tabak Especial</strong> (coffee-infused), and <strong>Java</strong> series (mocha notes).</p>
+                    <p>Perfect for quick breaks or travel, our small cigar selection includes premium <strong>Cohiba Pequenos</strong> and <strong>Drew Estate</strong> favorites: <strong>ACID Kuba Kuba tins</strong>, <strong>Tabak Especial</strong>, and <strong>Java</strong> series.</p>
                 </div>
                 <div class="card fade-in">
                     <h3>Premium Cigarettes</h3>
-                    <p>Complete cigarette selection featuring America's most popular brands. <strong>Marlboro</strong> (the cowboy classic since 1924), <strong>Camel</strong> (Turkish blend heritage), <strong>Newport</strong> (menthol leader), and <strong>American Spirit</strong> (additive-free, organic options).</p>
+                    <p>Complete cigarette selection featuring America's most popular brands. <strong>Marlboro</strong>, <strong>Camel</strong>, <strong>Newport</strong>, <strong>American Spirit</strong>, <strong>Parliament</strong>, <strong>Kool</strong>, and value options like <strong>Pall Mall</strong>.</p>
                 </div>
                 <div class="card fade-in">
                     <h3>Disposable Vapes</h3>
-                    <p>Cutting-edge disposable vape selection featuring top brands. <strong>Puff Bar</strong> (original disposable pioneer), <strong>Hyde</strong> (long-lasting performance), <strong>Elf Bar</strong> (sleek European design), <strong>Lost Mary</strong> (premium flavors), and <strong>Fume</strong> (cloud production).</p>
+                    <p>Cutting-edge disposable vape selection featuring top brands. <strong>Puff Bar</strong>, <strong>Hyde</strong>, <strong>Elf Bar</strong>, <strong>Lost Mary</strong>, <strong>Fume</strong>, <strong>Breeze</strong>, and <strong>RAZZ Slim Den</strong>. Wide variety of flavors and nicotine strengths.</p>
                 </div>
                 <div class="card fade-in">
                     <h3>Pipe Tobacco & RYO</h3>
-                    <p>For traditional tobacco enthusiasts, we carry quality pipe tobacco and roll-your-own options. <strong>American Club</strong> (smooth American blend), <strong>OHM</strong> (premium Turkish and Virginia), and <strong>4 Aces</strong> (classic mellow blend).</p>
+                    <p>For traditional tobacco enthusiasts, we carry quality pipe tobacco and roll-your-own options. <strong>American Club</strong>, <strong>OHM</strong>, and <strong>4 Aces</strong>, alongside classic blends for traditional smokers.</p>
                 </div>
                 <div class="card fade-in">
                     <h3>Glass & Accessories</h3>
-                    <p>Premium smoking accessories featuring <strong>Hemper</strong> glassware - American-made, scientifically designed pieces. Complete selection of water pipes, hookahs, rolling papers, premium lighters, cigar cutters, desktop humidors, and artistic ashtrays.</p>
+                    <p>Premium smoking accessories featuring <strong>Hemper</strong> glassware - American-made, scientifically designed pieces. Complete selection of water pipes, hookahs, rolling papers, premium lighters, and cigar cutters.</p>
                 </div>
                 <div class="card fade-in">
                     <h3>Cuban Heritage Cigars</h3>
-                    <p>Experience the legendary Cuban cigar tradition with <strong>Romeo y Julieta</strong> (Shakespeare-inspired excellence since 1875), <strong>Cohiba</strong> (Fidel Castro's personal brand), and <strong>Montecristo</strong> (the crown jewel of Cuban cigars). Now crafted in Dominican Republic with authentic Cuban heritage.</p>
+                    <p>Experience the legendary Cuban cigar tradition with <strong>Romeo y Julieta</strong>, <strong>Cohiba</strong>, and <strong>Montecristo</strong>. Now crafted in Dominican Republic with authentic Cuban heritage and time-honored techniques.</p>
                 </div>
                 <div class="card fade-in">
                     <h3>Lifestyle & Gifts</h3>
-                    <p>Unique gift selections including <strong>Mythical Candle Co.</strong> specialty candles with masculine scents perfect for cigar rooms. Don't miss our exclusive <strong>Magical Mystery Drawer</strong> - carefully curated discounted singles, rare cigars, and surprise finds.</p>
+                    <p>Unique gift selections including <strong>Mythical Candle Co.</strong> specialty candles with masculine scents perfect for cigar rooms. Don't miss our exclusive <strong>Magical Mystery Drawer</strong> with rare finds.</p>
                 </div>
             </div>
         </div>
