--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             position: relative;
             display: flex;
             align-items: center;
-            background: linear-gradient(135deg, rgba(31, 31, 31, 0.9) 0%, rgba(0, 0, 0, 0.7) 100%),
+            background: linear-gradient(135deg, rgba(31, 31, 31, 0.3) 0%, rgba(0, 0, 0, 0.2) 100%),
                         url('assets/img/hero-storefront.jpg');
             background-size: cover;
             background-position: center;
@@ -246,7 +246,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: radial-gradient(circle at 30% 70%, rgba(225, 44, 46, 0.2) 0%, transparent 50%);
+            background: radial-gradient(circle at 30% 70%, rgba(225, 44, 46, 0.1) 0%, transparent 50%);
             z-index: 1;
         }
 
@@ -266,11 +266,8 @@
             margin-bottom: 1.5rem;
             line-height: 1.1;
             letter-spacing: -0.02em;
-            background: linear-gradient(135deg, var(--white) 0%, var(--red) 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-            text-shadow: none;
+            color: var(--red);
+            text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
         }
 
         .hero-subtitle {
