--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 
         .btn-secondary:hover {
             transform: translateY(-4px);
-            background: var(--white);
+            background: var(--gradient-primary);
             color: var(--ember);
             border-color: var(--white);
         }
