fixing all the shit i broke

--- a/index.html
+++ b/index.html
@@ -1008,7 +1008,7 @@
                         </div>
                         <p class="card-text">Whether you're a seasoned aficionado or just beginning your cigar journey, our knowledgeable staff will guide you to the perfect selection. Experience our climate-controlled walk-in humidor, comfortable lounge atmosphere, and competitive prices with regular promotions.</p>
                         
-                        <div style="margin: 2rem 0;">
+                        <div style="margin: 2rem 0;"><br>
                             <h4 style="color: var(--red); margin-bottom: 1rem;">Why Choose Big Ash:</h4>
                             <ul style="list-style: none; padding: 0; line-height: 1.8;">
                                 <li>✓ Expert staff guidance</li>
