adding fb widget

--- a/index.html
+++ b/index.html
@@ -773,6 +773,10 @@
     </style>
 </head>
 <body>
+    <!-- Facebook SDK -->
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v23.0&appId=APP_ID"></script>
+    
     <a href="#main-content" class="skip-to-content">Skip to main content</a>
     
     <!-- Header -->
@@ -828,7 +832,7 @@
                         <a href="#lounge" class="btn btn-primary">Experience Our Lounge</a>
                     </div>
                     <div class="hero-about-image">
-                        <img src="assets/img/humidor-1.jpg" alt="Premium walk-in humidor with climate-controlled cigar storage">
+                        <div class="fb-page" data-href="https://www.facebook.com/TheBigAshLounge" data-tabs="timeline,events" data-width="340" data-height="500" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/TheBigAshLounge" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/TheBigAshLounge">The Tobacco Stop &amp; Big Ash Cigar Lounge</a></blockquote></div>
                     </div>
                 </div>
             </div>
