--- a/index.html
+++ b/index.html
@@ -514,14 +514,30 @@
             position: relative;
             border-radius: 24px;
             overflow: hidden;
-            aspect-ratio: 4/3;
             box-shadow: var(--shadow-strong);
+            background: var(--light-gray);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            min-height: 400px;
         }
 
         .hero-about-image img {
             width: 100%;
             height: 100%;
             object-fit: cover;
+        }
+
+        /* Facebook Widget Styling */
+        .hero-about-image .fb-page {
+            width: 100% !important;
+            max-width: 100% !important;
+            border-radius: 16px;
+            overflow: hidden;
+        }
+
+        .hero-about-image .fb-page iframe {
+            border-radius: 16px !important;
         }
 
         /* Contact Section */
@@ -568,7 +584,7 @@
         }
 
         .contact-info a {
-            color: var(--white);
+            color: var (--white);
             text-decoration: none;
             border-bottom: 2px solid rgba(255, 255, 255, 0.3);
             transition: border-color 0.3s ease;
@@ -832,7 +848,7 @@
                         <a href="#lounge" class="btn btn-primary">Experience Our Lounge</a>
                     </div>
                     <div class="hero-about-image">
-                        <div class="fb-page" data-href="https://www.facebook.com/TheBigAshLounge" data-tabs="timeline,events" data-width="340" data-height="500" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/TheBigAshLounge" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/TheBigAshLounge">The Tobacco Stop &amp; Big Ash Cigar Lounge</a></blockquote></div>
+                        <div class="fb-page" data-href="https://www.facebook.com/TheBigAshLounge" data-tabs="timeline,events" data-width="400" data-height="600" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/TheBigAshLounge" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/TheBigAshLounge">The Tobacco Stop &amp; Big Ash Cigar Lounge</a></blockquote></div>
                     </div>
                 </div>
             </div>
