--- a/index.html
+++ b/index.html
@@ -538,6 +538,17 @@
 
         .hero-about-image .fb-page iframe {
             border-radius: 16px !important;
+            width: 100% !important;
+            min-width: 100% !important;
+        }
+
+        .hero-about-image .fb-page span {
+            width: 100% !important;
+            max-width: 100% !important;
+        }
+
+        .hero-about-image .fb-page .fb-xfbml-parse-ignore {
+            width: 100% !important;
         }
 
         /* Contact Section */
