--- a/index.html
+++ b/index.html
@@ -511,9 +511,9 @@
         }
 
         .hero-about-image {
-            overflow: hidden;
             position: relative;
             border-radius: 24px;
+            overflow: hidden;
             box-shadow: var(--shadow-strong);
             background: var(--light-gray);
             display: flex;
@@ -529,62 +529,10 @@
             object-fit: cover;
         }
 
-        /* Facebook Widget Styling */
+        /* Simplified Facebook Widget Styling */
         .hero-about-image .fb-page {
-            width: 100% !important;
-            max-width: 100% !important;
-            border-radius: 0;
+            border-radius: 16px;
             overflow: hidden;
-            margin: 0 !important;
-            padding: 0 !important;
-            display: block !important;
-            height: 100% !important;
-        }
-
-        .hero-about-image .fb-page iframe {
-            border-radius: 0 !important;
-            width: 100% !important;
-            min-width: 100% !important;
-            height: 100% !important;
-            margin: 0 !important;
-            padding: 0 !important;
-            border: none !important;
-        }
-
-        .hero-about-image .fb-page span {
-            width: 100% !important;
-            max-width: 100% !important;
-            height: 100% !important;
-            margin: 0 !important;
-            padding: 0 !important;
-            display: block !important;
-        }
-
-        .hero-about-image .fb-page .fb-xfbml-parse-ignore {
-            width: 100% !important;
-            height: 100% !important;
-            margin: 0 !important;
-            padding: 0 !important;
-        }
-
-        /* Force Facebook widget to be full width and height */
-        .hero-about-image .fb-page,
-        .hero-about-image .fb-page *,
-        .hero-about-image .fb-page iframe {
-            box-sizing: border-box !important;
-        }
-
-        /* Override Facebook's container styling */
-        .hero-about-image .fb-page > span {
-            width: 100% !important;
-            max-width: none !important;
-            height: 100% !important;
-        }
-
-        .hero-about-image .fb-page iframe[style] {
-            width: 100% !important;
-            max-width: 100% !important;
-            height: 100% !important;
         }
 
         /* Contact Section */
@@ -838,7 +786,7 @@
 <body>
     <!-- Facebook SDK -->
     <div id="fb-root"></div>
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v23.0&appId=APP_ID"></script>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v23.0&appId=1234567890123456"></script>
     
     <a href="#main-content" class="skip-to-content">Skip to main content</a>
     
@@ -895,7 +843,7 @@
                         <a href="#lounge" class="btn btn-primary">Experience Our Lounge</a>
                     </div>
                     <div class="hero-about-image">
-                        <div class="fb-page" data-href="https://www.facebook.com/TheBigAshLounge" data-tabs="timeline,events" data-width="500" data-height="600" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/TheBigAshLounge" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/TheBigAshLounge">The Tobacco Stop &amp; Big Ash Cigar Lounge</a></blockquote></div>
+                        <div class="fb-page" data-href="https://www.facebook.com/TheBigAshLounge" data-tabs="timeline,events" data-width="600" data-height="600" data-small-header="true" data-adapt-container-width="false" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/TheBigAshLounge" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/TheBigAshLounge">The Tobacco Stop &amp; Big Ash Cigar Lounge</a></blockquote></div>
                     </div>
                 </div>
             </div>
