--- a/index.html
+++ b/index.html
@@ -516,10 +516,8 @@
             overflow: hidden;
             box-shadow: var(--shadow-strong);
             background: var(--light-gray);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            min-height: 400px;
+            display: block;
+            min-height: 600px;
             padding: 0;
         }
 
@@ -529,8 +527,11 @@
             object-fit: cover;
         }
 
-        /* Simplified Facebook Widget Styling */
+        /* Fixed Facebook Widget Styling */
         .hero-about-image .fb-page {
+            display: block !important;
+            width: 100%;
+            height: 100%;
             border-radius: 16px;
             overflow: hidden;
         }
