--- a/index.html
+++ b/index.html
@@ -784,7 +784,7 @@
 <body>
     <!-- Facebook SDK -->
     <div id="fb-root"></div>
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v23.0&appId=1234567890123456"></script>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v23.0"></script>
     
     <a href="#main-content" class="skip-to-content">Skip to main content</a>
     
