brushed up revision V1.

--- a/index.html
+++ b/index.html
@@ -878,7 +878,7 @@
                 <div class="hero-about fade-in">
                     <div class="hero-about-content">
                         <h2>Welcome to Excellence</h2>
-                        <p>Welcome to <strong>Big Ash Cigar Lounge & The Tobacco Stop</strong> — Fort Wayne's premier destination for premium cigars, tobacco products, and smoking accessories. Located at <strong>9111 Lima Rd</strong>, we feature spacious climate and humidity controlled cigar storage and Indiana's most comfortable cigar lounge. In business since 1995 — this is our original location.</p>
+                        <p>Welcome to <strong>Big Ash Cigar Lounge & The Tobacco Stop</strong> — Fort Wayne's premier destination for premium cigars, tobacco products, and smoking accessories. Located at <strong>9111 Lima Rd</strong>, we feature spacious climate and humidity controlled cigar storage and Indiana's most comfortable cigar lounge. In business since 1995 — still in our original location.</p>
                         <p>Our commitment to quality and exceptional customer service has made us the go-to destination for cigar enthusiasts throughout Fort Wayne and beyond. From novice smokers to seasoned aficionados, we provide an unparalleled experience in luxury and comfort.</p>
                         <a href="#lounge" class="btn btn-primary">Experience Our Lounge</a>
                     </div>
@@ -925,7 +925,7 @@
                         <div class="card-header">
                             <h3 class="card-title">Discounted Tobacco</h3>
                         </div>
-                        <p class="card-text">Full selection including <strong>Marlboro</strong>, <strong>Camel</strong>, <strong>Newport</strong>, <strong>American Spirit</strong>, <strong>Parliament</strong>, <strong>Kool</strong>, <strong>Pall Mall</strong>, and specialty varieties. We carry a full line of discounted tobacco and the lowest priced cigarettes in Indiana.</p>
+                        <p class="card-text">Full selection including <strong>Marlboro</strong>, <strong>Camel</strong>, <strong>Newport</strong>, <strong>American Spirit</strong>, <strong>Parliament</strong>, <strong>Kool</strong>, <strong>Pall Mall</strong>, and specialty varieties. We carry a full line of discounted tobacco and the lowest priced cigarette in Indiana.</p>
                     </div>
                     
                     <div class="card fade-in">
@@ -944,9 +944,9 @@
 
                     <div class="card fade-in" style="border: 2px solid var(--red);">
                         <div class="card-header">
-                            <h3 class="card-title">Daily Cigar - Exclusive</h3>
+                            <h3 class="card-title"><i>Daily Cigar</i> - Exclusive</h3>
                         </div>
-                        <p class="card-text">Our Daily Cigar is an exclusively curated cigar that can only be found at Tobacco Stop and nowhere else in the world. A mild to medium smoke perfect for any time of day. Currently available in Maduro Toro, with Gordo coming soon!</p>
+                        <p class="card-text">Our <i>Daily Cigar</i> is an exclusively curated cigar that can only be found at Tobacco Stop and nowhere else in the world. A mild to medium smoke perfect for any time of day. Currently available in Maduro Toro, with Gordo coming soon!</p>
                     </div>
                 </div>
             </div>
@@ -971,7 +971,7 @@
                             <h4 style="color: var(--ember); margin-bottom: 1rem; font-size: 1.2rem;">Premium Features:</h4>
                             <ul style="list-style: none; padding: 0; line-height: 1.8;">
                                 <li>✓ 24-Hour Member Access</li>
-                                <li>✓ Personal humidors available (first come, first serve!)</li>
+                                <li>✓ Personal humidor available (first come, first serve!)</li>
                                 <li>✓ Premium Leather Seating</li>
                                 <li>✓ Multiple Entertainment Screens</li>
                                 <li>✓ Private Game Room</li>
@@ -990,7 +990,6 @@
                             <h4 style="color: var(--white); margin-bottom: 1rem;">Member Benefits:</h4>
                             <ul style="list-style: none; padding: 0; line-height: 1.8;">
                                 <li>• Personal humidors available (first come, first serve!)</li>
-                                <li>• Exclusive Member Pricing</li>
                                 <li>• Private Events & Tastings</li>
                                 <li>• 24/7 Lounge Access</li>
                                 <li>• Guest Privileges</li>
