fixing tag line

--- a/index.html
+++ b/index.html
@@ -861,7 +861,7 @@
         <div class="container">
             <div class="hero-content">
                 <h1 class="hero-title">Big Ash Cigar Lounge & The Tobacco Stop</h1>
-                <p class="hero-subtitle">Fort Wayne's premier destination for premium cigars, tobacco products, and the most comfortable cigar lounge in Indiana. In business since 1995 – this is our original location.</p>
+                <p class="hero-subtitle">Fort Wayne's premier destination for premium cigars, tobacco products, and the most comfortable cigar lounge in Indiana. <br> <i>Celebrating 30 years in our original location.</i></p>
                 <div class="hero-cta">
                     <a href="#contact" class="btn btn-primary">Visit Our Lounge</a>
                     <a href="#about" class="btn btn-secondary">Explore Our Story</a>
