fixing tag line

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Big Ash Cigar Lounge & The Tobacco Stop Fort Wayne | Premium Cigars Indiana</title>
+    <title>Big Ash Cigar Lounge & Tobacco Stop Fort Wayne | Premium Cigars Indiana</title>
     <meta name="description" content="Fort Wayne's premier cigar lounge featuring premium cigars, tobacco products, and smoking accessories. Climate and humidity controlled cigar storage with Perdomo, Arturo Fuente, Drew Estate. Open 7 days a week at 9111 Lima Rd.">
     <style>
         /* Modern CSS Reset */
@@ -834,11 +834,11 @@
     <header class="header" id="header">
         <div class="container">
             <nav class="nav" role="navigation" aria-label="Main navigation">
-                <a href="#" class="logo" aria-label="Big Ash Cigar Lounge & The Tobacco Stop - Fort Wayne's Premier Cigar Destination">
+                <a href="#" class="logo" aria-label="Big Ash Cigar Lounge & Tobacco Stop - Fort Wayne's Premier Cigar Destination">
                     <div class="logo-icon" aria-hidden="true">
                         <img src="assets/img/big-ash-logo.png" alt="Big Ash Logo" style="width: 100%; height: 100%; object-fit: contain;">
                     </div>
-                    <div class="logo-text">Big Ash Cigar Lounge & The Tobacco Stop</div>
+                    <div class="logo-text">Big Ash Cigar Lounge & Tobacco Stop</div>
                 </a>
                 
                 <ul class="nav-links" id="nav-links">
@@ -860,7 +860,7 @@
     <section class="hero" id="hero">
         <div class="container">
             <div class="hero-content">
-                <h1 class="hero-title">Big Ash Cigar Lounge & The Tobacco Stop</h1>
+                <h1 class="hero-title">Big Ash Cigar Lounge & Tobacco Stop</h1>
                 <p class="hero-subtitle">Fort Wayne's premier destination for premium cigars, tobacco products, and the most comfortable cigar lounge in Indiana. <br> <i>Celebrating 30 years in our original location.</i></p>
                 <div class="hero-cta">
                     <a href="#contact" class="btn btn-primary">Visit Our Lounge</a>
@@ -878,13 +878,13 @@
                 <div class="hero-about fade-in">
                     <div class="hero-about-content">
                         <h2>Welcome to Excellence</h2>
-                        <p>Welcome to <strong>Big Ash Cigar Lounge & The Tobacco Stop</strong> — Fort Wayne's premier destination for premium cigars, tobacco products, and smoking accessories. Located at <strong>9111 Lima Rd</strong>, we feature spacious climate and humidity controlled cigar storage and Indiana's most comfortable cigar lounge. In business since 1995 — still in our original location.</p>
+                        <p>Welcome to <strong>Big Ash Cigar Lounge & Tobacco Stop</strong> — Fort Wayne's premier destination for premium cigars, tobacco products, and smoking accessories. Located at <strong>9111 Lima Rd</strong>, we feature spacious climate and humidity controlled cigar storage and Indiana's most comfortable cigar lounge. In business since 1995 — still in our original location.</p>
                         <p>Our commitment to quality and exceptional customer service has made us the go-to destination for cigar enthusiasts throughout Fort Wayne and beyond. From novice smokers to seasoned aficionados, we provide an unparalleled experience in luxury and comfort.</p>
                         <a href="#lounge" class="btn btn-primary">Experience Our Lounge</a>
                     </div>
                     <div class="hero-about-image">
                         <div class="fb-page-wrapper">
-                            <div class="fb-page" data-href="https://www.facebook.com/TheBigAshLounge" data-tabs="timeline,events" data-width="" data-height="600" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/TheBigAshLounge" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/TheBigAshLounge">Big Ash Cigar Lounge &amp; The Tobacco Stop</a></blockquote></div>
+                            <div class="fb-page" data-href="https://www.facebook.com/TheBigAshLounge" data-tabs="timeline,events" data-width="" data-height="600" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/TheBigAshLounge" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/TheBigAshLounge">Big Ash Cigar Lounge &amp; Tobacco Stop</a></blockquote></div>
                         </div>
                     </div>
                 </div>
@@ -1111,7 +1111,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2025 Big Ash Cigar Lounge & The Tobacco Stop. All rights reserved.</p>
+                <p>&copy; 2025 Big Ash Cigar Lounge & Tobacco Stop. All rights reserved.</p>
                 <p style="margin-top: 0.5rem; opacity: 0.8;">Experience the finest cigars and most welcoming atmosphere in Fort Wayne.</p>
             </div>
         </div>
