--- a/index.html
+++ b/index.html
@@ -1062,11 +1062,11 @@
                             <h4 style="color: var(--red); margin-bottom: 1rem;">Why Choose Big Ash:</h4>
                             <ul style="list-style: none; padding: 0; line-height: 1.8;">
                                 <li>✓ Expert staff guidance</li>
-                                <li>✓ Climate and humidity controlled cigar storage access</li>
+                                <li>✓ Climate and humidity controlled cigar storage storage</li>
                                 <li>✓ 24-hour member access</li>
                                 <li>✓ Premium lounge atmosphere</li>
                                 <li>✓ Competitive pricing</li>
-                                <li>✓ Regular promotions</li>
+                                <li>✓ Reliable, friendly experience</li>
                             </ul>
                         </div>
                         
